Open previous project on click and don't start playing audio immediately

--- a/src/main/resources/html/changelog.html
+++ b/src/main/resources/html/changelog.html
@@ -8,7 +8,7 @@
       background-color: #111111;
       color: white;
       font-family: Arial,serif;
-      margin: 0 0.5em 0 -0.5em;
+      margin: 0 0.5em 0 0;
       padding: 0;
     }
 
