--- a/src/main/resources/html/changelog.html
+++ b/src/main/resources/html/changelog.html
@@ -7,8 +7,9 @@
     body {
       background-color: #111111;
       color: white;
-      font-family: Arial,serif;
+      font-family: Segoe UI,Frutiger,Frutiger Linotype,Dejavu Sans,Helvetica Neue,Arial,sans-serif;
       margin: 0 0.5em 0 0;
+      font-size: 0.8em;
       padding: 0;
     }
 
