--- a/src/main/resources/html/changelog.html
+++ b/src/main/resources/html/changelog.html
@@ -8,9 +8,13 @@
       background-color: #111111;
       color: white;
       font-family: Segoe UI,Frutiger,Frutiger Linotype,Dejavu Sans,Helvetica Neue,Arial,sans-serif;
-      margin: 0 0.5em 0 0;
+      margin: 0 1em 0 0;
       font-size: 0.8em;
       padding: 0;
+    }
+
+    a:link, a:visited, a:hover, a:active {
+      color: #00ff00;
     }
 
     ul {
