Add support for toggling upsamping, toggling legacy visualiser, and fix bugs when deleting visualiser

--- a/Resources/oscilloscope/oscilloscope.html
+++ b/Resources/oscilloscope/oscilloscope.html
@@ -100,6 +100,7 @@
         grid : true,
         noise : true,
         persistence : 0,
+        disableFilter : false,
     }
 
     Number.prototype.toFixedMinus = function(k)
@@ -318,8 +319,6 @@
 <!--</tr></table>-->
 
 <script>
-    
-var killed = false;
 
 var Controls = {
     generateUrl : function()
