Add separate brightness and intensity sliders

--- a/Resources/oscilloscope/oscilloscope.html
+++ b/Resources/oscilloscope/oscilloscope.html
@@ -103,7 +103,8 @@
         sweepMsDiv : 1,
         sweepTriggerValue : 0,
         mainGain : 0.0,
-        exposureStops : 0.0,
+        brightness : 0.0,
+        intensity: 0.02,
         hue : 125,
         invertXY : false,
         grid : true,
