--- a/Resources/oscilloscope/oscilloscope.html
+++ b/Resources/oscilloscope/oscilloscope.html
@@ -222,69 +222,76 @@
 	 from woscope by e1ml : https://github.com/m1el/woscope -->
 
 <script id="gaussianVertex" type="x-shader">
-	#define EPS 1E-6
-	uniform float uInvert;
-	uniform float uSize;
-	uniform float uNEdges;
-	uniform float uFadeAmount;
-	uniform float uIntensity;
-	uniform float uGain;
-	attribute vec2 aStart, aEnd;
-	attribute float aIdx;
-	varying vec4 uvl;
-	varying vec2 vTexCoord;
-	varying float vLen;
-	varying float vSize;
-	void main () {
-		float tang;
-		vec2 current;
-		// All points in quad contain the same data:
-		// segment start point and segment end point.
-		// We determine point position using its index.
-		float idx = mod(aIdx,4.0);
+    #define EPS 1E-6
+    uniform float uInvert;
+    uniform float uSize;
+    uniform float uNEdges;
+    uniform float uFadeAmount;
+    uniform float uIntensity;
+    uniform float uGain;
+    attribute vec3 aStart, aEnd;
+    attribute float aIdx;
+    varying vec4 uvl;
+    varying vec2 vTexCoord;
+    varying float vLen;
+    varying float vSize;
+    void main () {
+        float tang;
+        vec2 current;
+        // All points in quad contain the same data:
+        // segment start point and segment end point.
+        // We determine point position using its index.
+        float idx = mod(aIdx,4.0);
 
-		// `dir` vector is storing the normalized difference
-		// between end and start
-		vec2 dir = (aEnd-aStart)*uGain;
-		uvl.z = length(dir);
+        vec2 aStartPos = aStart.xy;
+        vec2 aEndPos = aEnd.xy;
+        float aStartBrightness = aStart.z;
+        float aEndBrightness = aEnd.z;
 
-		if (uvl.z > EPS)
-		{
-			dir = dir / uvl.z;
-			vSize = 0.006/pow(uvl.z,0.08);
-		}
-		else
-		{
-		// If the segment is too short, just draw a square
-			dir = vec2(1.0, 0.0);
-			vSize = 0.006/pow(EPS,0.08);
-		}
+        // `dir` vector is storing the normalized difference
+        // between end and start
+        vec2 dir = (aEndPos-aStartPos)*uGain;
+        uvl.z = length(dir);
 
-		vSize = uSize;
-		vec2 norm = vec2(-dir.y, dir.x);
+        if (uvl.z > EPS)
+        {
+            dir = dir / uvl.z;
+            vSize = 0.006/pow(uvl.z,0.08);
+        }
+        else
+        {
+        // If the segment is too short, just draw a square
+            dir = vec2(1.0, 0.0);
+            vSize = 0.006/pow(EPS,0.08);
+        }
 
-		if (idx >= 2.0) {
-			current = aEnd*uGain;
-			tang = 1.0;
-			uvl.x = -vSize;
-		} else {
-			current = aStart*uGain;
-			tang = -1.0;
-			uvl.x = uvl.z + vSize;
-		}
-		// `side` corresponds to shift to the "right" or "left"
-		float side = (mod(idx, 2.0)-0.5)*2.0;
-		uvl.y = side * vSize;
+        vSize = uSize;
+        vec2 norm = vec2(-dir.y, dir.x);
 
-		uvl.w = uIntensity*mix(1.0-uFadeAmount, 1.0, floor(aIdx / 4.0 + 0.5)/uNEdges);
+        if (idx >= 2.0) {
+            current = aEndPos*uGain;
+            tang = 1.0;
+            uvl.x = -vSize;
+            uvl.w = aEndBrightness;
+        } else {
+            current = aStartPos*uGain;
+            tang = -1.0;
+            uvl.x = uvl.z + vSize;
+            uvl.w = aStartBrightness;
+        }
+        // `side` corresponds to shift to the "right" or "left"
+        float side = (mod(idx, 2.0)-0.5)*2.0;
+        uvl.y = side * vSize;
 
-		vec4 pos = vec4((current+(tang*dir+norm*side)*vSize)*uInvert,0.0,1.0);
-		gl_Position = pos;
+        uvl.w *= uIntensity * mix(1.0-uFadeAmount, 1.0, floor(aIdx / 4.0 + 0.5)/uNEdges);
+
+        vec4 pos = vec4((current+(tang*dir+norm*side)*vSize)*uInvert,0.0,1.0);
+        gl_Position = pos;
         vTexCoord = 0.5*pos.xy+0.5;
         //float seed = floor(aIdx/4.0);
         //seed = mod(sin(seed*seed), 7.0);
         //if (mod(seed/2.0, 1.0)<0.5) gl_Position = vec4(10.0);
-	}
+    }
 </script>
 
 <script id="gaussianFragment" type="x-shader">
