Add saturation effect

--- a/Resources/oscilloscope/oscilloscope.html
+++ b/Resources/oscilloscope/oscilloscope.html
@@ -105,6 +105,7 @@
         mainGain : 0.0,
         brightness : 0.0,
         intensity: 0.02,
+        saturation: 1.0,
         hue : 125,
         invertXY : false,
         grid : true,
@@ -438,9 +439,17 @@
     uniform sampler2D uTexture2; //big glow
     uniform sampler2D uTexture3; //screen
     uniform float uExposure;
+    uniform float uSaturation;
     uniform vec3 uColour;
     varying vec2 vTexCoord;
     varying vec2 vTexCoordCanvas;
+    
+    vec3 desaturate(vec3 color, float factor) {
+        vec3 lum = vec3(0.299, 0.587, 0.114);
+        vec3 gray = vec3(dot(lum, color));
+        return vec3(mix(color, gray, factor));
+    }
+    
     void main (void)
     {
     	vec4 line = texture2D(uTexture0, vTexCoordCanvas);
@@ -453,7 +462,8 @@
     	float tlight = 1.0-pow(2.0, -uExposure*light);
     	float tlight2 = tlight*tlight*tlight;
     	gl_FragColor.rgb = mix(uColour, vec3(1.0), 0.3+tlight2*tlight2*0.5)*tlight;
-        gl_FragColor.a= 1.0;
+        gl_FragColor.rgb = desaturate(gl_FragColor.rgb, 1.0 - uSaturation);
+        gl_FragColor.a = 1.0;
     }
 </script>
 
