Move settings cog to title bar

--- a/Resources/oscilloscope/oscilloscope.html
+++ b/Resources/oscilloscope/oscilloscope.html
@@ -186,6 +186,7 @@
         if (visualiserOnly) {
             popout.remove();
             fullscreen.remove();
+            settings.remove();
         }
     });
     
